docs: update screenshot
Signed-off-by: Martin Chodur <m.chodur@seznam.cz>

--- a/src/html/sidebar.html
+++ b/src/html/sidebar.html
@@ -289,8 +289,8 @@
 </div>
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="https://unpkg.com/huebee@2/dist/huebee.pkgd.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script type="application/javascript">
   /**
    * On document load, assign click handlers to each button.
